<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/mytoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"


        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="282dp">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/editTextImie"
                app:layout_constraintHorizontal_bias="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextImie"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/insert_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:text="@string/surname"
                app:layout_constraintEnd_toStartOf="@+id/editTextNazwisko"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editTextNazwisko"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/enter_surname"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextImie" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:text="@string/number_of_grades"
                app:layout_constraintEnd_toStartOf="@+id/editTextLiczbaocen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextLiczbaocen"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/enter_number_of_grades"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNazwisko" />

            <Button
                android:id="@+id/oceny_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickOceny"
                android:text="@string/grades"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLiczbaocen"
                tools:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/sredniaText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autoText="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="Twoja średnia:"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <Button
        android:id="@+id/przycisk_srednia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSuper"
        android:text="Blad"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sredniaText"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>